--- a/BaseProject/Areas/Admin/Views/Account/Login.cshtml
+++ b/BaseProject/Areas/Admin/Views/Account/Login.cshtml
@@ -53,6 +53,9 @@
     <p class="mb-1">
         <a href="#">I forgot my password</a>
     </p>
+    <p>
+        @Html.ActionLink("Register as a new user", "Register")
+    </p>
     @*<p class="mb-0">
             <a href="register.html" class="text-center">Register a new membership</a>
         </p>*@
