--- a/BaseProject/Areas/Admin/Views/Category/Index.cshtml
+++ b/BaseProject/Areas/Admin/Views/Category/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@model IEnumerable<BaseProject.Models.EF.Category>
-
+﻿@model PagedList.PagedList<BaseProject.Models.EF.Category>
+@using PagedList.Mvc;
+@using PagedList;
 @{
     ViewBag.Title = "Danh mục";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -32,9 +33,9 @@
                 </ol>
             </div>
         </div>
-    </div>--><!-- /.container-fluid -->
+    </div>-->
+<!-- /.container-fluid -->
 <!--</section>-->
-
 <!-- Main content -->
 <section class="content">
 
@@ -44,13 +45,29 @@
             <h3 class="card-title">Danh sách danh mục</h3>
 
             <div class="card-tools">
-                <a href="/admin/category/create" class="btn btn-block"><i class="fa fa-plus-circle"></i></a>
+                <a href="/admin/category/create" class="btn btn-file"><i class="fa fa-plus-circle"></i></a>
+                <a href="#" class="btn btn-danger" id="BtnDeleteAll"><i class="fa fa-trash"></i></a>
             </div>
         </div>
         <div class="card-body">
+            <div class="row">
+                <div class="col-6">
+                    @using (Html.BeginForm("Index", "Category", FormMethod.Get, new { }))
+                    {
+                        <div class="input-group input-group-sm">
+                            @Html.TextBox("Searchtext", null, new { @class = "form-control" })
+
+                            <span class="input-group-append">
+                                <button type="submit" class="btn btn-info btn-flat">Tìm kiếm</button>
+                            </span>
+                        </div>
+                    }
+                </div>
+            </div>
             <table class="table table-hover">
                 <thead>
                     <tr>
+                        <th><input type="checkbox" id="SelectAll" /></th>
                         <th>STT</th>
                         <th>Tên danh mục</th>
                         <th>Mô tả</th>
@@ -61,10 +78,11 @@
                 <tbody>
                     @if (Model != null && Model.Any())
                     {
-                        var i = 1;
+                        var i = ((ViewBag.Page - 1) * ViewBag.PageSize) + 1;
                         foreach (var item in Model)
                         {
                             <tr id="trow_@item.Id">
+                                <td><input type="checkbox" class="cbkItem" value="@item.Id" /></td>
                                 <td>
                                     @i
                                 </td>
@@ -102,7 +120,13 @@
                     }
                 </tbody>
             </table>
-           
+            <div class="row">
+                <div class="col-6"></div>
+                <div class="col-6" style="text-align:right;">
+                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+                </div>
+            </div>
+
         </div>
         <!-- /.card-body -->
         <div class="card-footer">
@@ -114,8 +138,7 @@
 
 </section>
 <!-- /.content -->
-
-@section scripts{
+@*@section scripts{
     <script>
         $(document).ready(function () {
             $('body').on('click', '.btnDelete', function () {
@@ -131,10 +154,86 @@
                                 $('#trow_' + id).remove();
                             }
                         }
-                        
+
                     });
                 }
             });
         });
     </script>
-    }
+    }*@
+
+@section scripts{
+    <script>
+        $(document).ready(function () {
+
+            $('body').on('click', '#BtnDeleteAll', function (e) {
+                e.preventDefault();
+                var str = "";
+                var checkbox = $(this).parents('.card').find('tr td input:checkbox');
+                var i = 0;
+                checkbox.each(function () {
+                    if (this.checked) {
+                        var _id = $(this).val();
+                        if (i === 0) {
+                            str += _id;
+                        } else {
+                            str += "," + _id;
+                        }
+                        i++;
+                    } else {
+                        checkbox.attr('selected', '');
+                    }
+                });
+                if (str.length > 0) {
+                    var conf = confirm('Bạn có muốn xóa các bản ghi này hay không?');
+                    if (conf === true) {
+                        $.ajax({
+                            url: '/admin/category/deleteAll',
+                            type: 'POST',
+                            data: { ids: str },
+                            success: function (rs) {
+                                if (rs.success) {
+                                    location.reload();
+                                }
+                            }
+                        });
+                    }
+                }
+            });
+
+            $('body').on('change', '#SelectAll', function () {
+                var checkStatus = this.checked;
+                var checkbox = $(this).parents('.card-body').find('tr td input:checkbox');
+                checkbox.each(function () {
+                    this.checked = checkStatus;
+                    if (this.checked) {
+                        checkbox.attr('selected', 'checked');
+                    } else {
+                        checkbox.attr('selected', '');
+                    }
+                });
+            });
+
+
+            $('body').on('click', '.btnDelete', function () {
+                var id = $(this).data("id");
+                var conf = confirm('Bạn có muốn xóa bản ghi này không?');
+                if (conf === true) {
+                    $.ajax({
+                        url: '/admin/category/delete',
+                        type: 'POST',
+                        data: { id: id },
+                        success: function (rs) {
+                            if (rs.success) {
+                                $('#trow_' + id).remove();
+                            }
+                        }
+                    });
+                }
+            });
+
+
+
+        });
+    </script>
+}
