--- a/BaseProject/Views/Order/CheckOut.cshtml
+++ b/BaseProject/Views/Order/CheckOut.cshtml
@@ -57,11 +57,34 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Payment, htmlAttributes: new { @class = "control-label col-md-2" })
+
+        <h5>PHƯƠNG THỨC THANH TOÁN</h5>
+        @*@Html.LabelFor(model => model.Payment, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Payment, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Payment, "", new { @class = "text-danger" })
+        </div>*@
+
+
+        <div class="col-md-10">
+            <div class="custom-control custom-radio">
+                <input id="cash" name="Payment" type="radio" class="custom-control-input" checked="" required="" value="cash">
+                <label class="custom-control-label" for="cash">Tiền mặt</label>
+            </div>
+            <div class="custom-control custom-radio">
+                <input id="momo" name="Payment" type="radio" class="custom-control-input" required="" value="momo">
+                <label class="custom-control-label" for="momo">MoMo</label>
+            </div>
+            <div class="custom-control custom-radio">
+                <input id="vnpay" name="Payment" type="radio" class="custom-control-input" required="" value="vnpay">
+                <label class="custom-control-label" for="vnpay">VNPay</label>
+            </div>
         </div>
+
+
+
+
+
     </div>
     @*<div class="form-group">
             @Html.LabelFor(model => model.Payment, htmlAttributes: new { @class = "control-label col-md-2" })
