--- a/BaseProject/Areas/Admin/Views/Home/Index.cshtml
+++ b/BaseProject/Areas/Admin/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="card-body">
-            Start creating your amazing application!
+           @Html.Action("Refresh","Home")
         </div>
         <!-- /.card-body -->
         <div class="card-footer">
