--- a/BaseProject/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/BaseProject/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -40,7 +40,7 @@
             <!-- Add icons to the links using the .nav-icon class
     with font-awesome or any other icon font library -->
             <li class="nav-item">
-                <a href="/admin/Category" class="nav-link">
+                <a href="/admin/ManageCategory" class="nav-link">
                     <i class="nav-icon fas fa-list-alt"></i>
                     <p>
                         Danh Mục                        
@@ -49,7 +49,7 @@
                 
             </li>
             <li class="nav-item">
-                <a href="/Admin/new" class="nav-link">
+                <a href="/Admin/Managenew" class="nav-link">
                     <i class="nav-icon fas fa-file-alt"></i>
                     <p>
                         Tin Tức                       
@@ -66,19 +66,19 @@
                 </a>
                 <ul class="nav nav-treeview">
                     <li class="nav-item">
-                        <a href="/admin/account" class="nav-link">
+                        <a href="/admin/Manageaccount" class="nav-link">
                             <i class="far fa-circle nav-icon"></i>
                             <p>Danh sách tài khoản</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/admin/role" class="nav-link">
+                        <a href="/admin/Managerole" class="nav-link">
                             <i class="far fa-circle nav-icon"></i>
                             <p>Role</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/admin/role/setrole" class="nav-link">
+                        <a href="/admin/Managerole/setrole" class="nav-link">
                             <i class="far fa-circle nav-icon"></i>
                             <p>Set Role</p>
                         </a>
