--- a/BaseProject/Areas/Admin/Views/ManageAccount/Login.cshtml
+++ b/BaseProject/Areas/Admin/Views/ManageAccount/Login.cshtml
@@ -2,13 +2,11 @@
 @{
     ViewBag.Title = "Login";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutLogin.cshtml";
-
-
 }
 
 <div class="card-body login-card-body">
     <p class="login-box-msg">Sign in to start your session</p>
-    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    @using (Html.BeginForm("Login", "ManageAccount", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true);
@@ -21,8 +19,7 @@
             </div>
         </div>
         <div class="input-group mb-3">
-            @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @placeholder = "Mật khẩu" })
-            @*<input type="password" class="form-control" placeholder="Password">*@
+            @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @placeholder = "Mật khẩu" })   
             <div class="input-group-append">
                 <div class="input-group-text">
                     <span class="fas fa-lock"></span>
@@ -32,7 +29,6 @@
         <div class="row">
             <div class="col-8">
                 <div class="icheck-primary">
-                    @*<input type="checkbox" id="remember">*@
                     @Html.CheckBoxFor(x => x.RememberMe)
                     <label for="remember">
                         Remember Me
@@ -47,16 +43,9 @@
         </div>
     }
 
+<p>
+    @*@Html.ActionLink("Register as a new user", "Register", "Account")*@
+    @*<a href="@Url.Action("Register", "Account")">Register as a new user</a>*@
+</p>
 
-    <!-- /.social-auth-links -->
-
-    <p class="mb-1">
-        <a href="#">I forgot my password</a>
-    </p>
-    <p>
-        @Html.ActionLink("Register as a new user", "Register")
-    </p>
-    @*<p class="mb-0">
-            <a href="register.html" class="text-center">Register a new membership</a>
-        </p>*@
 </div>
