--- a/BaseProject/Areas/Admin/Views/ManageCategory/Index.cshtml
+++ b/BaseProject/Areas/Admin/Views/ManageCategory/Index.cshtml
@@ -1,11 +1,10 @@
-﻿@model PagedList.PagedList<BaseProject.Models.EF.New>
+﻿@model PagedList.PagedList<BaseProject.Models.EF.Category>
 @using PagedList.Mvc;
 @using PagedList;
 @{
-    ViewBag.Title = "Danh sách tin tức";
+    ViewBag.Title = "Danh mục";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-
 @section naviheader{
     <!-- Left navbar links -->
     <ul class="navbar-nav">
@@ -16,7 +15,7 @@
             <a href="/admin/home" class="nav-link">Trang chủ</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-            <a href="/admin/new" class="nav-link">Danh sách tin tức</a>
+            <a href="/admin/ManageCategory" class="nav-link">Danh mục</a>
         </li>
     </ul>
 }
@@ -25,38 +24,39 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Quản lý tin tức</h1>
+                <h1>Quản lý danh mục</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">@ViewBag.Title</li>
+                    <li class="breadcrumb-item active">Danh mục</li>
                 </ol>
             </div>
         </div>
-    </div>--><!-- /.container-fluid -->
+    </div>-->
+<!-- /.container-fluid -->
 <!--</section>-->
-
 <!-- Main content -->
 <section class="content">
+
     <!-- Default box -->
     <div class="card card-info">
         <div class="card-header">
-            <h3 class="card-title">@ViewBag.Title</h3>
+            <h3 class="card-title">Danh sách danh mục</h3>
 
             <div class="card-tools">
-                <a href="/admin/new/create" class="btn btn-file"><i class="fa fa-plus-circle"></i></a>
+                <a href="/admin/Managecategory/create" class="btn btn-file"><i class="fa fa-plus-circle"></i></a>
                 <a href="#" class="btn btn-danger" id="BtnDeleteAll"><i class="fa fa-trash"></i></a>
             </div>
         </div>
         <div class="card-body">
             <div class="row">
                 <div class="col-6">
-                    @using (Html.BeginForm("Index", "New", FormMethod.Get, new { }))
+                    @using (Html.BeginForm("Index", "ManageCategory", FormMethod.Get, new { }))
                     {
                         <div class="input-group input-group-sm">
                             @Html.TextBox("Searchtext", null, new { @class = "form-control" })
-                            @*<input type="text" name="searchtext" class="form-control">*@
+
                             <span class="input-group-append">
                                 <button type="submit" class="btn btn-info btn-flat">Tìm kiếm</button>
                             </span>
@@ -64,15 +64,16 @@
                     }
                 </div>
             </div>
-            <table class="table table-hover text-center">
+            <table class="table table-hover">
                 <thead>
                     <tr>
                         <th><input type="checkbox" id="SelectAll" /></th>
                         <th>STT</th>
-                        <th>Hình ảnh</th>
-                        <th>Tiêu đề</th>
-                        <th>Hiển thị</th>
-                        <th style="width:150px;"></th>
+                        <th>Tên danh mục</th>
+                        <th>Ảnh</th>
+                        <th>Mô tả</th>
+                        <th>Thời gian tạo</th>
+                        <th>Thời gian cập nhật</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -81,23 +82,36 @@
                         var i = ((ViewBag.Page - 1) * ViewBag.PageSize) + 1;
                         foreach (var item in Model)
                         {
-                            var strCheck = item.IsActive ? "<i class='fa fa-check text-success'></i>" : "<i class='fas fa-times text-danger'></i>";
                             <tr id="trow_@item.Id">
                                 <td><input type="checkbox" class="cbkItem" value="@item.Id" /></td>
-                                <td>@i</td>
-                                <td><img src="@item.Images" width="50" /></td>
-                                <td>@item.Title</td>
                                 <td>
-                                    <a href='#' data-id="@item.Id" class="btnActive">@Html.Raw(strCheck)</a>
+                                    @i
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CategoryName)
+                                </td>
+                                <td><img src="@item.Images" width="50" /></td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Description)
                                 </td>
                                 <td>
-                                    <a href="/admin/new/edit/@item.Id" class="btn btn-sm btn-primary"><i class="fa fa-wrench"></i></a>
+                                    @Html.DisplayFor(modelItem => item.CreatedAt)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.UpdatedAt)
+                                </td>
+                                <td>
+                                    <a href="/admin/Managecategory/edit/@item.Id" class="btn btn-sm btn-primary"><i class="fa fa-wrench"></i></a>
                                     <a href="#" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete"><i class="fa fa-trash"></i></a>
+
                                 </td>
                             </tr>
                             i++;
 
                         }
+
+
                     }
                     else
                     {
@@ -114,6 +128,7 @@
                     @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
                 </div>
             </div>
+
         </div>
         <!-- /.card-body -->
         <div class="card-footer">
@@ -125,6 +140,29 @@
 
 </section>
 <!-- /.content -->
+@*@section scripts{
+    <script>
+        $(document).ready(function () {
+            $('body').on('click', '.btnDelete', function () {
+                var id = $(this).data("id");
+                var conf = confirm('Bạn có muốn xóa bản ghi này không?');
+                if (conf === true) {
+                    $.ajax({
+                        url: '/admin/category/delete',
+                        type: 'POST',
+                        data: { id: id },
+                        success: function (rs) {
+                            if (rs.success) {
+                                $('#trow_' + id).remove();
+                            }
+                        }
+
+                    });
+                }
+            });
+        });
+    </script>
+    }*@
 
 @section scripts{
     <script>
@@ -152,7 +190,7 @@
                     var conf = confirm('Bạn có muốn xóa các bản ghi này hay không?');
                     if (conf === true) {
                         $.ajax({
-                            url: '/admin/new/deleteAll',
+                            url: '/admin/Managecategory/deleteAll',
                             type: 'POST',
                             data: { ids: str },
                             success: function (rs) {
@@ -184,7 +222,7 @@
                 var conf = confirm('Bạn có muốn xóa bản ghi này không?');
                 if (conf === true) {
                     $.ajax({
-                        url: '/admin/new/delete',
+                        url: '/admin/Managecategory/delete',
                         type: 'POST',
                         data: { id: id },
                         success: function (rs) {
@@ -196,30 +234,8 @@
                 }
             });
 
-            $('body').on('click', '.btnActive', function (e) {
-                e.preventDefault();
-                var btn = $(this);
-                var id = btn.data("id");
-                $.ajax({
-                    url: '/admin/new/IsActive',
-                    type: 'POST',
-                    data: { id: id },
-                    success: function (rs) {
-                        if (rs.success) {
-                            if (rs.isAcive) {
-                                btn.html("<i class='fa fa-check text-success'></i>");
-                                //$(this).find("i").removeClass("fas fa-times text-danger")
-                                //$(this).find("i").addClass("fa fa-check text-success");
-                            } else {
-                                btn.html("<i class='fas fa-times text-danger'></i>");
-                            }
-                        }
 
-                    }
-                });
-            });
 
         });
     </script>
 }
-
