--- a/BaseProject/Areas/Admin/Views/ManageNew/Create.cshtml
+++ b/BaseProject/Areas/Admin/Views/ManageNew/Create.cshtml
@@ -16,7 +16,7 @@
             <a href="/admin/home" class="nav-link">Trang chủ</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-            <a href="/admin/new" class="nav-link">Tin tức</a>
+            <a href="/admin/Managenew" class="nav-link">Tin tức</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
             <a href="#" class="nav-link">Thêm mới</a>
@@ -52,7 +52,7 @@
         </div>
         <div class="card-body">
             <div class="bs-stepper-content">
-                @using (Html.BeginForm("Create", "New", FormMethod.Post, new { }))
+                @using (Html.BeginForm("Create", "ManageNew", FormMethod.Post, new { }))
                 {
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -99,7 +99,7 @@
                     <div class="form-group">
                         
 
-                        <a href="/admin/new" class="btn btn-danger"><i class="fa fa-arrow-left"></i></a>
+                        <a href="/admin/Managenew" class="btn btn-danger"><i class="fa fa-arrow-left"></i></a>
 
                         <button type="submit" class="btn btn-primary"><i class="fa fa-thumbs-up"></i></button>
                     </div>
