--- a/BaseProject/Views/Cart/Index.cshtml
+++ b/BaseProject/Views/Cart/Index.cshtml
@@ -34,15 +34,16 @@
                 });
             });
 </script>
-<table class="table">
-    <thead>
+<table class="table" >
+    <thead >
         <tr>
             <th>Product Name</th>
-            <th>Price</th>
             <th>Quantity</th>
-            <th>Subtotal</th>
+            @*<th>Price</th>*@
+
+            <th>Total</th>
             <th>Action</th>
-            <th>SỐ LƯỢNG</th>
+            @*<th>SỐ LƯỢNG</th>*@
         </tr>
     </thead>
     <tbody>
@@ -50,10 +51,6 @@
         {
             <tr>
                 <td>@item.ProductName</td>
-                <td>@item.Price.ToString("N0")đ</td>
-                <td>@item.Quantity</td>
-                <td>@((item.Price * item.Quantity).ToString("N0"))đ</td>
-                <td><button class="btn-remove remove" data-item-cart-id="@item.Id">Remove</button></td>
                 <td>
                     <div class="price-textbox">
                         <span class="minus-text" onclick="minusQuantity('@item.Id')"><i class="glyphicon glyphicon-minus"></i></span>
@@ -61,10 +58,15 @@
                         <span class="plus-text" onclick="plusQuantity('@item.Id')"><i class="glyphicon glyphicon-plus"></i></span>
                     </div>
                 </td>
+                @*<td>@item.Price.ToString("N0")đ</td>*@
+                @*<td>@item.Quantity</td>*@
+                <td>@((item.Price * item.Quantity).ToString("N0"))đ</td>
+                <td><button class="btn-remove remove" data-item-cart-id="@item.Id">Remove</button></td>
+
             </tr>
         }
         <tr>
-            <td colspan="5">Total:</td>
+            <td colspan="5">Sutotal:</td>
             <td colspan="4">@Model.Sum(item => (item.Price * item.Quantity)).ToString("N0")đ</td>
         </tr>
         
@@ -72,15 +74,30 @@
     </table>
 
 <div>
-    <button class="btn-clear clear">Clear Cart</button>
+    
+    
 </div>
 
 <div class="proceed-check">
-    @*<button href="@Url.Action("CheckOut","Order")"  class="btn-primary-gold btn-medium">THANH TOÁN </button>*@
-    @*<a href="@Url.Action("CheckOut","Order")"  class="btn-primary-gold btn-medium">THANH TOÁN</a>*@
-    <button onclick="location.href='@Url.Action("CheckOut","Order")'" class="btn-primary-gold btn-medium"> THANH TOÁN</button>
+   
+    <div class="row">
+
+        <div class="col-md-3">
+            <button class="btn btn-danger">Clear Cart</button>
+        </div>
+        <div class="col-md-9 text-right" >
+            <button onclick="location.href='@Url.Action("CheckOut","Order")'" class="btn btn-primary">THANH TOÁN </button>
+        </div>
+    </div>
 
 </div>
+
+
+
+
+
+
+
 
 <script type="text/javascript">
     // Plus number quantiy product detail
