--- a/BaseProject/Views/ProductUser/Details.cshtml
+++ b/BaseProject/Views/ProductUser/Details.cshtml
@@ -7,97 +7,155 @@
 
 <h2>Details</h2>
 
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Category.CategoryName)
-        </dt>
+@*<div>
+        <h4>Product</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Category.CategoryName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Category.CategoryName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Category.CategoryName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ProductName)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.ProductName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ProductName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.ProductName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Description)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Price)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Price)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.image)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.image)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.image)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.image)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Status)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Status)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Quantity)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Quantity)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Quantity)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Location)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Location)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Location)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Location)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Created_At)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Created_At)
+            </dt>
 
-        <dd>
+            <dd>
 
-            @*@Html.DisplayFor(model => model.Created_At)*@
-            @ViewBag.Created_At
-        </dd>
+                @Html.DisplayFor(model => model.Created_At)
+                @ViewBag.Created_At
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Updated_At)
-           
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Updated_At)
 
-        <dd>
-            @*@Html.DisplayFor(model => model.Updated_At)*@
-            @ViewBag.Updated_At
-        </dd>
+            </dt>
 
-    </dl>
+            <dd>
+                @Html.DisplayFor(model => model.Updated_At)
+                @ViewBag.Updated_At
+            </dd>
+
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>*@
+
+
+
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Product Details</h4>
+                    <hr />
+
+                    <dl>
+                        <dt>Category</dt>
+                        <dd>@Html.DisplayFor(model => model.Category.CategoryName)</dd>
+
+                        <dt>Product Name</dt>
+                        <dd>@Html.DisplayFor(model => model.ProductName)</dd>
+
+                        <dt>Description</dt>
+                        <dd>@Html.DisplayFor(model => model.Description)</dd>
+
+                        <dt>Price</dt>
+                        <dd>@Html.DisplayFor(model => model.Price)</dd>
+
+                        <dt>Image</dt>
+                        <dd>@Html.DisplayFor(model => model.image)</dd>
+
+                        <dt>Status</dt>
+                        <dd>@Html.DisplayFor(model => model.Status)</dd>
+
+                        <dt>Quantity</dt>
+                        <dd>@Html.DisplayFor(model => model.Quantity)</dd>
+
+                        <dt>Location</dt>
+                        <dd>@Html.DisplayFor(model => model.Location)</dd>
+
+                        <dt>Created At</dt>
+                        <dd>@ViewBag.Created_At</dd>
+
+                        <dt>Updated At</dt>
+                        <dd>@ViewBag.Updated_At</dd>
+
+                        <dt>View</dt>
+                        <dd>@Html.DisplayFor(model => model.ViewCount)</dd>
+
+                    </dl>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary" }) |
+    @Html.ActionLink("Back to List", "Index", new { @class = "btn btn-secondary" })
 </p>
