--- a/BaseProject/Views/ProductUser/ListProductCategory.cshtml
+++ b/BaseProject/Views/ProductUser/ListProductCategory.cshtml
@@ -1,118 +1,125 @@
 ﻿@model IEnumerable<BaseProject.Models.EF.Product>
-
+@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "ListProductCategory";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.IsLoggedIn = User.Identity.IsAuthenticated;
 }
 
-<h2>ListProductCategory</h2>
+<h1 style="text-align:center">Danh sách sản phẩm</h1>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        @*<th>
-            @Html.DisplayNameFor(model => model.Id)
-        </th>*@
-        @*<th>
-            @Html.DisplayNameFor(model => model.Category.CategoryName)
-        </th>*@
-        <th>
-            @Html.DisplayNameFor(model => model.ProductName)
-        </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>*@
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.image)
-        </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.Status)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Location)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Created_At)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Updated_At)
-        </th>*@
-        <th></th>
-    </tr>
+
+
+
+
+<div class="row">
+    @*<div class="col-md-12">
+            <div class="panel-heading">
+                @Html.ActionLink("Create", "Create", "ProductUser", new { @class = "btn btn-warning" })
+            </div>
+        </div>*@
 
     @foreach (var item in Model)
     {
-        <tr>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>*@
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Category.CategoryName)
-            </td>*@
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductName)
-            </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>*@
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.image)
-            </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Location)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Created_At)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Updated_At)
-            </td>*@
-        <td>
-            @*@Html.ActionLink("Edit", "Edit", new { id = item.Id }) |*@
-            @*@Html.ActionLink("Details", "Details", new { id = item.Id })*@
-            @*@Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
-            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary" })
-            <button class="btn btn-danger add-to-cart" data-product-id="@item.Id">Add to Cart</button>
-        </td>
-        </tr>
-    }
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+            <div class="panel panel-default" style="text-align: center">
+                <div class="panel panel-heading" style="font-weight: bold">
+                    @item.ProductName
 
-</table>
+                </div>
+                <div class="panel-body">
+                    <p>
+                        <img style="height:150px" src="@item.image" />
+                    </p>
+                    <p>
+                        <strong>Giá: </strong>@item.Price.ToString("N0") VNĐ
+                    </p>
+                    <p>
+                        <strong>Số lượng: </strong>@item.Quantity
+                    </p>
+                    <p>
+                        <strong>Địa điểm: </strong>@item.Location
+                    </p>
+
+
+
+                </div>
+                <div class="text-center panel-footer clearfix">
+
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-warning" })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
+                    <button class="btn btn-danger add-to-cart" data-product-id="@item.Id">Add to Cart</button>
+                </div>
+
+
+            </div>
+
+        </div>
+    }
+</div>
+
+
+
+
 <script>
+        $(document).ready(function () {
+            $('.add-to-cart').click(function (e) {
+                e.preventDefault();
+                var productId = $(this).data('product-id');
+                var quantity = 1;
+                $.ajax({
+                    url: '/Cart/AddToCart',
+                    type: 'POST',
+                    data: { productId: productId, quantity: quantity },
+                    success: function (data) {
+                        alert("Thêm thành công");
+                        // Thực hiện các thay đổi trên giao diện để hiển thị giỏ hàng mới nhất
+                    },
+                    error: function () {
+                        alert('An error occurred while adding to cart.');
+                    }
+                });
+            });
+        });
+    </script>
+
+
+@*<script>
     $(document).ready(function () {
         $('.add-to-cart').click(function (e) {
             e.preventDefault();
-            var productId = $(this).data('product-id');
-            var quantity = 1;
-            $.ajax({
-                url: '/Cart/AddToCart',
-                type: 'POST',
-                data: { productId: productId, quantity: quantity },
-                success: function (data) {
-                    alert("Thêm thành công");
-                    // Thực hiện các thay đổi trên giao diện để hiển thị giỏ hàng mới nhất
-                },
-                error: function () {
-                    alert('An error occurred while adding to cart.');
-                }
-            });
+            console.log(@Request.IsAuthenticated)
+
+            if ("@Request.IsAuthenticated" === "True") {
+                var productId = $(this).data('product-id');
+                var quantity = 1;
+                $.ajax({
+                    url: '/Cart/AddToCart',
+                    type: 'POST',
+                    data: { productId: productId, quantity: quantity },
+                    success: function (data) {
+                        alert("Thêm thành công");
+                        // Thực hiện các thay đổi trên giao diện để hiển thị giỏ hàng mới nhất
+                    },
+                    error: function () {
+                        alert('An error occurred while adding to cart.');
+                    }
+                });
+            } else {
+                // Chuyển hướng người dùng đến trang đăng nhập
+                window.location.href = '/Account/Login'; // Thay đổi URL thành URL thực tế của trang đăng nhập
+            }
         });
     });
-</script>
+</script>*@
+
+
+
+
+
+
+
+
+
+
