--- a/BaseProject/Views/Shared/_Layout.cshtml
+++ b/BaseProject/Views/Shared/_Layout.cshtml
@@ -23,12 +23,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Trang chủ", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Category", "Index", "CategoryUser")</li>
-
                     <li>@Html.ActionLink("Product", "Index", "ProductUser")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Đăng sản phẩm", "Create", "ProductUser")</li>
                     <li>@Html.Partial("~/Views/Cart/_CartPartial.cshtml")</li>
+
 
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -39,7 +37,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Le Tran Tan Luc</p>
         </footer>
     </div>
     @RenderSection("upload", required: false)
